Fixed overflow on small devices with much items

--- a/css/app.css
+++ b/css/app.css
@@ -36,13 +36,13 @@ span.highlight {
 .reveal-animation {
 	-webkit-transition: 1s linear all;
  	transition: 1s linear all;
-	overflow: hidden;
 }
 
 .reveal-animation.ng-enter{
  	max-height: 0;
  	margin: 0 15px;
  	opacity: 0;
+ 	overflow: hidden;
 }
 
 .reveal-animation.ng-enter.ng-enter-active {
@@ -55,6 +55,7 @@ span.highlight {
  	max-height: 50px;
  	margin: 15px;
  	opacity: 1;
+ 	overflow: hidden;
 }
 
 .reveal-animation.ng-leave.ng-leave-active {
